[package]
name = "blazebee"
version = "0.1.1-beta.1"
edition = "2021"
description = "Lightweight, high-performance system metrics collector for Linux"
readme = "README.md"
homepage = "https://rubtsov-stan.github.io/blazebee/"
repository = "https://github.com/rubtsov-stan/blazebee"
documentation = "https://rubtsov-stan.github.io/blazebee/"
keywords = ["monitoring", "metrics", "mqtt", "system", "linux", "rust"]
categories = ["command-line-utilities", "development-tools", "hardware", "network-programming"]
license = "Apache-2.0"
authors = ["Stanislav Rubtsov <rubtzov.stas@gmail.com>"]
rust-version = "1.86"
exclude = ["/target", "/docs", "/.github"]
publish = false

[[bin]]
name = "blazebee"
path = "src/main.rs"

[workspace]
members = [
    "crates/mqtt/v3",
]

[package.metadata.release]
tag-name = "v{{version}}"
sign-tag = false
push = false
publish = false

[workspace.package]
version = "0.1.1-beta.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Stanislav Rubtsov <rubtzov.stas@gmail.com>"]
description = "BlazeBee workspace — lightweight system metrics collector and publisher"
repository = "https://github.com/rubtsov-stan/blazebee"
homepage = "https://rubtsov-stan.github.io/blazebee/"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["blazebee-mqtt-v3"]

blazebee-mqtt-v3 = ["dep:blazebee-mqtt-v3"]

minimal = [
    "collector-cpu",
    "collector-ram",
    "collector-disk",
    "collector-uptime",
    "collector-loadavg",
    "collector-processes",
]

standard = [
    "minimal",
    "collector-network",
    "collector-netstat",
    "collector-sockstat",
    "collector-vmstat",
    "collector-filesystem",
    "collector-systemd",
    "collector-ntp",
]

large = [
    "standard",
    "collector-arp",
    "collector-softnet",
    "collector-conntrack",
    "collector-ipvs",
    "collector-pressure",
    "collector-thermal",
    "collector-hwmon",
    "collector-entropy",
    "collector-filedfd",
    "collector-schedstat",
    "collector-stat",
    "collector-power",
    "collector-edac",
    "collector-mdraid",
]

collector-cpu = []
collector-ram = []
collector-disk = []
collector-network = []
collector-processes = []
collector-uptime = []
collector-loadavg = []
collector-vmstat = []
collector-arp = []
collector-netstat = []
collector-sockstat = []
collector-softnet = []
collector-conntrack = []
collector-ipvs = []
collector-pressure = []
collector-thermal = []
collector-hwmon = []
collector-entropy = []
collector-filedfd = []
collector-schedstat = []
collector-stat = []
collector-power = []
collector-edac = []
collector-filesystem = []
collector-mdraid = []
collector-ntp = []
collector-systemd = []

[workspace.dependencies]
async-trait = "0.1"
validator = { version = "0.18.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"

[dependencies]
async-trait = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "ansi", "json"] }
tracing-journald = "0.3"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { workspace = true }
toml = "0.8"
config = "0.14"
directories = "5.0"
thiserror = "2.0.12"
tokio = { workspace = true }
validator = { workspace = true }
tokio-util = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1.0.144"
bytes = "1.10.1"
blazebee-mqtt-v3 = { path = "crates/mqtt/v3", optional = true }
async-compression = { version = "0.4.34", features = ["zstd"] }
once_cell = "1.21.3"
inventory = "0.3.21"
futures = "0.3.31"
erased-serde = "0.4.9"
libc = "0.2.178"
console = "0.15"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.8"
tracing-test = "0.2"
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[package.metadata.deb]
maintainer = "Stanislav Rubtsov <rubtzov.stas@gmail.com>"
assets = [
    ["target/release/blazebee", "/usr/bin/blazebee", "755"],
    ["config.example.toml", "/etc/blazebee/config.toml", "644"],
    ["contrib/systemd/blazebee.service", "/lib/systemd/system/blazebee.service", "644"],
]
systemd-units = { enable = true, unit-name = "blazebee" }
section = "utils"
priority = "optional"

[package.metadata.deb.variants.minimal]
features = ["minimal"]

[package.metadata.deb.variants.standard]
features = ["standard"]

[package.metadata.deb.variants.large]
features = ["large"]